Development Event 1: The Venetian Gazetteer
- Created first development event
- Set up monthly event system for Consolidate the Stato Da Már

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -9,6 +9,13 @@
  br_venice_consolidate_progress_bar_revolt: "From Atlantica fighting a Civil War"
 
  # events for Consolidate the Stato da Màr
+ br_venice_events.20.t: "The Venetian Gazetteer"
+ br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
+ br_venice_events.20.f: ""Your Excellencies, for centuries, our galleys have carried the silks of the East and the gold of the West. But I propose a new cargo, one far more potent: the written word. The press is a new kind of ship, gentlemen, a fleet of thought that sails on the tides of reason. It carries not spices or silks, but ideas. And ideas, once landed on the shores of men's minds, can conquer a continent without a single musket being fired. All they require is the wind of your support in their sails."\n\n--Giovanni Battista Rosso, addressing the Council of Ten" 
+ br_venice_events.20.a: "Provide a generous subsidy from the treasury."
+ br_venice_events.20.b: "Purchase the paper and install a government editor."
+ br_venice_events.20.c: "Grant the Church a dedicated column for scripture and homilies."
+
  br_venice_events.99.t: "The Roar Heard Across the Sea"
  br_venice_events.99.d: "The Stato da Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
  br_venice_events.99.f: "The work is done. The grumbling has ceased, the flags fly true, and the Lion of St. Mark now watches over a colony reborn. In the grand piazzas of L'Avana, they speak Venetian with pride; in the halls of the Grand Council, Atlantican representatives take their advisory seats. \n\n We did not break them. We did not abandon them. We remade them in our image, and in doing so, have created a power that will echo across the centuries. The Serene Republic is no longer just a European power, it is an Atlantic empire."
@@ -44,3 +51,14 @@
  br_modifier_venice_consolidate_timeout: "The Atlantican Identity"
  br_modifier_venice_consolidate_timeout: "Venetian Resentment"
  br_modifier_venice_consolidate_timeout3: "A Turn Inwards"
+ br_modifier_venice_newspaper: "Press Subsidy Program"
+ br_modifier_venice_press: "Controlled Press"
+ br_modifier_venice_press2: "Influenced Media"
+ br_modifier_venice_newspaper_purchase: "State-Controlled Media"
+ br_modifier_venice_press_devout: "Catholic Press"
+ br_modifier_venice_devout_atl: "Church-Controlled Media"
+
+ # Consolidation Progress Tooltips
+ br_venice_consolidation_4: "Gain #blue #bold 4#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_8: "Gain #blue #bold 8#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_3: "Gain #blue #bold 3#!#! #white #bold Consolidation Progress#!"
