Crisis Event Consequences
- Added events for consequences of Audit in 1st Crisis Event

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -16,6 +16,17 @@
  br_venice_events.1.a: "The garrison will be paid from our own coffers."
  br_venice_events.1.b: "We shall grant placate them with an advisory seat on the council."
  br_venice_events.1.c: "This is a matter for our auditors to resolve."
+
+ br_venice_events.2.t: "Auditors Uncover Graft"
+ br_venice_events.2.d: "Our patient investment in a thorough audit has borne fruit, uncovering a conspiracy and recovering the stolen revenue."
+ br_venice_events.2.f: "The Provveditore's agents, working with quiet diligence, have traced the missing tax shipment to a conspiracy between a colonial magistrate and a disgraced Venetian captain. The funds have been recovered and the conspirators arrested, demonstrating the formidable reach of the Republic's justice."
+ br_venice_events.2.a: "Let this be a lesson to all."
+
+ br_venice_events.3.t: "Auditors Stir Resentment"
+ br_venice_events.3.d: "Our heavy-handed audit has concluded, leaving a wake of resentment but no uncovered conspiracy."
+ br_venice_events.3.f: "The Provveditore's agents seized ledgers without cause and leveled public accusations based on rumor, convincing the Atlanticans that Venetian rule is arbitrary and unjust. We have found no corruption, but we have successfully manufactured a fresh grievance for colonial agitators to rally around."
+ br_venice_events.3.a: "A regrettable necessity."
+
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
@@ -69,6 +80,7 @@
  br_modifier_funding_colonial_garrison: "Colonial Garrison Payments"
  br_modifier_conciliatory_efforts: "Power Sharing"
  br_modifier_auditors: "Auditors in Atlantica"
+ br_modifier_venice_audit_failure: "Administrative Resentment"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
@@ -77,5 +89,7 @@
  br_venice_consolidation_2: "Gain #blue #bold 2#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_3: "Gain #blue #bold 3#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_4: "Gain #blue #bold 4#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_6: "Gain #blue #bold 6#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_8: "Gain #blue #bold 8#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_10: "Gain #blue #bold 10#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_negative_5: "Lose #blue #bold 5#!#! #white #bold Consolidation Progress#!"
