Crisis Event 2 & Sub Events
- Two more sub events tk
- Will def need to balance and play through a lot after all this is made

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -27,6 +27,20 @@
  br_venice_events.3.f: "The Provveditore's agents seized ledgers without cause and leveled public accusations based on rumor, convincing the Atlanticans that Venetian rule is arbitrary and unjust. We have found no corruption, but we have successfully manufactured a fresh grievance for colonial agitators to rally around."
  br_venice_events.3.a: "A regrettable necessity."
 
+ br_venice_events.4.t: "Whispers in the Piazza"
+ br_venice_events.4.d: "Loyalists in Atlanteum report that a radical Atlantican group plots to desecrate the statue The Patrician and the Pearl, a potent symbol of Venetian authority in the city."
+ br_venice_events.4.f: "Our informants in the Atlantican taverns and markets bring troubling news. A group, calling themselves the "Sons of the Shore," speak of the statue as an insult, a bronze depiction of their subjugation, with our Patrician forever taking the pearl from the diver at his feet. Their intention is to shatter this hierarchy, literally and symbolically."
+ br_venice_events.4.a: "The garrison will be stationed around the clock."
+ br_venice_events.4.b: "Have it quietly removed for “restoration”."
+ br_venice_events.4.c: "It is mere bluster. We will not be provoked."
+
+ br_venice_events.5.t: "The Perla Square Shooting"
+ br_venice_events.5.d: "Protests turned bloody when our soldiers fired upon a crowd attempting to deface the monument, leaving the symbol of our rule spattered with blood."
+ br_venice_events.5.f: "The "Sons of the Shore" did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket. \n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains. A local pamphleteer has already dubbed it "The Martyr's Fountain," and the square where it stands has been cordoned off."
+ br_venice_events.5.a: "Lock down the city!"
+ br_venice_events.5.b: "Clean off the stains and cover it up."
+ br_venice_events.5.c: "In times like these we must turn to God."
+
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
@@ -81,6 +95,14 @@
  br_modifier_conciliatory_efforts: "Power Sharing"
  br_modifier_auditors: "Auditors in Atlantica"
  br_modifier_venice_audit_failure: "Administrative Resentment"
+ br_modifier_venice_guarded_statue: "Guarded Monument"
+ br_modifier_venice_soldiers_in_plaza: "Soldiers in the Piazza"
+ br_modifier_venice_precautious_measures: "Precautious Measures"
+ br_modifier_venice_weakness_signs: "Signs of Weakness"
+ br_modifier_venice_monument_removal: "Quite Monument Removal"
+ br_modifier_venice_cover_up: "Massacre Painted Over"
+ br_modifier_venice_missionary_zeal: "Zealous Missions"
+ br_modifier_venice_mass_missionary_campaign: "Mass Missionary Campaign"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
@@ -89,7 +111,9 @@
  br_venice_consolidation_2: "Gain #blue #bold 2#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_3: "Gain #blue #bold 3#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_4: "Gain #blue #bold 4#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_5: "Gain #blue #bold 5#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_6: "Gain #blue #bold 6#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_8: "Gain #blue #bold 8#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_10: "Gain #blue #bold 10#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_negative_5: "Lose #blue #bold 5#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_negative_10: "Lose #blue #bold 10#!#! #white #bold Consolidation Progress#!"
