Crisis Event Outcome 2
Will need to create more branching events from this.

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -41,6 +41,13 @@
  br_venice_events.5.b: "Clean off the stains and cover it up."
  br_venice_events.5.c: "In times like these we must turn to God."
 
+ br_venice_events.6.t: "The Ghost in the Piazza"
+ br_venice_events.6.d: "Our covert attempt to remove the statue failed, resulting in the Patrician's figure being stolen by protestors, leaving an empty plinth as a monument to our humiliation."
+ br_venice_events.6.f: "Our plan was discovered. As our men attempted to disassemble the monument under the veil of night, they were ambushed by the "Sons of the Shore." After a brief, chaotic scuffle, the Atlanteans overwhelmed our workmen and made off with the central statue. \n\nWhere the Patrician once stood, there is only a stark, empty space. The diver still offers his pearl upwards, but now to nothing. A popular joke now circulates in the markets: "The Patrician was so shamed by the theft, he walked into the sea himself." Our authority has been made a laughingstock."
+ br_venice_events.6.a: "Search Every Building in the City!"
+ br_venice_events.6.b: "Commission a new, grander monument."
+ br_venice_events.6.c: "Craft a cheap replica. They won't know the difference."
+
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
@@ -73,6 +80,7 @@
  br_venice_events.104.b: "Their ingratitude will not be forgotten."
 
  # Modifiers for Consolidate the Stato da Màr events
+ ## Current plan is to cut down on modifier use during balancing and revision stages
  br_modifier_venice_consolidate_success: "Successful Consolidation"
  br_modifier_venice_consolidate_success_trade: "Smooth Sailing"
  br_modifier_venice_consolidate_success_trade2: "Prosperous Waters"
@@ -103,9 +111,12 @@
  br_modifier_venice_cover_up: "Massacre Painted Over"
  br_modifier_venice_missionary_zeal: "Zealous Missions"
  br_modifier_venice_mass_missionary_campaign: "Mass Missionary Campaign"
+ br_modifier_venice_costly_search: "Extensive Searches"
+ br_venice_modifiers_monument_comission: "Monument Comission"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
+ br_venice_chance_of_discovery: "There is a chance our replica will be discovered."
 
  # Consolidation Progress Tooltips
  br_venice_consolidation_2: "Gain #blue #bold 2#!#! #white #bold Consolidation Progress#!"
