Crisis Event Outcome 3 & Minor Cleanup

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -112,7 +112,7 @@
  br_modifier_venice_missionary_zeal: "Zealous Missions"
  br_modifier_venice_mass_missionary_campaign: "Mass Missionary Campaign"
  br_modifier_venice_costly_search: "Extensive Searches"
- br_venice_modifiers_monument_comission: "Monument Comission"
+ br_modifier_venice_monument_comission: "Monument Comission"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
@@ -126,5 +126,6 @@
  br_venice_consolidation_6: "Gain #blue #bold 6#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_8: "Gain #blue #bold 8#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_10: "Gain #blue #bold 10#!#! #white #bold Consolidation Progress#!"
+ br_venice_consolidation_negative_3: "Lose #blue #bold 3#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_negative_5: "Lose #blue #bold 5#!#! #white #bold Consolidation Progress#!"
  br_venice_consolidation_negative_10: "Lose #blue #bold 10#!#! #white #bold Consolidation Progress#!"
