--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -19,12 +19,12 @@
 
  br_venice_events.2.t: "Auditors Uncover Graft"
  br_venice_events.2.d: "Our patient investment in a thorough audit has borne fruit, uncovering a conspiracy and recovering the stolen revenue."
- br_venice_events.2.f: "The Provveditore's agents, working with quiet diligence, have traced the missing tax shipment to a conspiracy between a colonial magistrate and a disgraced Venetian captain. The funds have been recovered and the conspirators arrested, demonstrating the formidable reach of the Republic's justice."
+ br_venice_events.2.f: "A single sheet of paper, left on the Provveditore's desk. The wax seal is black.\n\n"The matter of the missing treasury shipment is concluded. The parties have been reminded of their obligations to the Republic. Permanently. The funds are restored. Do not let this happen again.""
  br_venice_events.2.a: "Let this be a lesson to all."
 
  br_venice_events.3.t: "Auditors Stir Resentment"
  br_venice_events.3.d: "Our heavy-handed audit has concluded, leaving a wake of resentment but no uncovered conspiracy."
- br_venice_events.3.f: "The Provveditore's agents seized ledgers without cause and leveled public accusations based on rumor, convincing the Atlanticans that Venetian rule is arbitrary and unjust. We have found no corruption, but we have successfully manufactured a fresh grievance for colonial agitators to rally around."
+ br_venice_events.3.f: "They took your books too?"\n\n"Threw them in the street. A lifetime of honest trade, soaked in the mud. For what?" \n\n"For show. To prove they have the power. They don't care if the books are clean. They only care that we remember who can take them."
  br_venice_events.3.a: "A regrettable necessity."
 
  br_venice_events.4.t: "Whispers in the Piazza"
@@ -34,7 +34,7 @@
  br_venice_events.4.b: "Have it quietly removed for “restoration”."
  br_venice_events.4.c: "It is mere bluster. We will not be provoked."
 
- br_venice_events.5.t: "The Perla Square Shooting"
+ br_venice_events.5.t: "El Masacre de la Perla"
  br_venice_events.5.d: "Protests turned bloody when our soldiers fired upon a crowd attempting to deface the monument, leaving the symbol of our rule spattered with blood."
  br_venice_events.5.f: "The "Sons of the Shore" did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket. \n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains. A local pamphleteer has already dubbed it "The Martyr's Fountain," and the square where it stands has been cordoned off."
  br_venice_events.5.a: "Lock down the city!"
@@ -47,6 +47,36 @@
  br_venice_events.6.a: "Search Every Building in the City!"
  br_venice_events.6.b: "Commission a new, grander monument."
  br_venice_events.6.c: "Craft a cheap replica. They won't know the difference."
+
+ br_venice_events.7.t: "The Shame of Atlanteum"
+ br_venice_events.7.d: "We failed to act, and the protestors have publicly and thoroughly defaced the monument, carving a message of finality into its base."
+ br_venice_events.7.f: "They dared. Under the light of day, the "Sons of the Shore" swarmed the Patrician and the Pearl. They were not stopped.\n\n When they departed, the Admiral's pointing hand was broken off, the charter in his other hand was replaced with a hangman's noose, and the inscription "NVNC ET SEMPER" had been chiseled away, replaced with a single, crude word: "FINIS." The message could not be clearer."
+ br_venice_events.7.a: "The Patrician Must Come Down."
+ br_venice_events.7.b: "Seal off the Piazza."
+ br_venice_events.7.c: "We must live with our failure."
+
+ br_venice_events.8.t: "The Ransacked Pearl"
+ br_venice_events.8.d: "Our soldiers have turned the city of Atlanteum upside down in a desperate search for the stolen statue, only seeding resentment through their means."
+ br_venice_events.8.f: "Under martial decree, doors have been splintered, warehouses ransacked, and merchants dragged from their beds for questioning. The Patrician remains missing, but every shattered lock and torn-up floorboard only serves to curdle people's fears into cold resentment for the Republic.  The merchants whose ledgers we seized and the laborers whose homes we violated, once divided by class, can now find some unity in a common, simmering anger."
+ br_venice_events.8.a: "We cannot stop and embarrass ourselves now."
+ br_venice_events.8.b: "This is causing more harm than the statue is worth. Call off the search."
+
+ br_venice_events.9.t: "The Statue in the Sawdust"
+ br_venice_events.9.d: "After months of fruitless searching, the location of the Patrician has finally been revealed. This discovery was not made by our soldiers, but revealed through a traitor amongst the thieves."
+ br_venice_events.9.f: ""Your Excellencies," the message from Provveditore Foscari reads, "a shipwright, one Luca Contarini, fearful for his business and his life, came to us in the dead of night. The ‘Sons of the Shore’ did not smuggle the statue away. They disgraced it where it fell, sawing the Patrician into pieces and hiding the bronze within a false wall in a workshop facing the very square it once dominated. It was a masterpiece of humiliation, hidden in plain sight all along.""
+ br_venice_events.9.a: "Melt it down. We will erase this humiliation."
+ br_venice_events.9.b: "Restore it to its plinth. Our authority must be reaffirmed."
+
+ br_venice_events.10.t: "The Pearl Bearer"
+ br_venice_events.10.d: "Our commission for a replacement for the lost Patrician and the Pearl is complete."
+ br_venice_events.10.f: ""The Pearl Bearer" is far grander than the statue it replaces. On a stepped stone plinth, a muscular Atlantican pearl diver is cast in bronze, straining to lift an enormous pearl above his head in a gesture of offering or triumph. Behind him stands a smaller figure of a Venetian patrician, one hand extended to rest upon the diver's shoulder in a pose that could be read as guidance, support, or restraint."
+ br_venice_events.10.a: "Install it in Perla Square. This is a useful new narrative."
+ br_venice_events.10.b: "Bring it to Venice. Let this marvel adorn the Piazza San Marco."
+
+ br_venice_events.11.t: "The Replica's Shame"
+ br_venice_events.11.d: "Our use of a cheap replica has been catastrophically exposed. The "Sons of the Shore" have produced the true statue, parading it through the streets of Atlanteum as a triumphant symbol of our deceit."
+ br_venice_events.11.f: "From the personal log of Sergeant Valerio of the Colonial Garrison \n\nThey've made a mockery of our mockery. The replica's head is mounted on a post outside the customs house. A beggar's bowl is nailed beneath it, filled with a handful of lead tokens painted gold—fake coins for our fake Patrician. Scrawled on a plank in tar: "SPARE A DUCAT FOR A BROKEN REPUBLIC?" \n\nThe Arsenale's mark is still visible on the inside of the plaster neck. My men see it. The merchants see it. There's no order I can give that will scrape this shame off our boots."
+ br_venice_events.11.a: A devastating blow to our prestige.
 
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
@@ -113,10 +143,16 @@
  br_modifier_venice_mass_missionary_campaign: "Mass Missionary Campaign"
  br_modifier_venice_costly_search: "Extensive Searches"
  br_modifier_venice_monument_comission: "Monument Comission"
+ br_modifier_venice_unsatisfying_solution: "Unsatisfying Solution"
+ br_modifier_venice_conceded_failure: "Conceded Failure"
+ br_modifier_venice_embarrassing_withdraw: "Embarrassing Withdrawal"
+ br_modifier_venice_restored_honor: "Restored Honor"
+ br_modifier_venice_world_class_artwork: "World Class Monument"
 
  # Additional Tooltips
  br_venice_corruption_uncover_chance: "May uncover corruption in Atlantica."
  br_venice_chance_of_discovery: "There is a chance our replica will be discovered."
+ br_venice_state_radicals: 
 
  # Consolidation Progress Tooltips
  br_venice_consolidation_2: "Gain #blue #bold 2#!#! #white #bold Consolidation Progress#!"
