Flavor Writing Polish
- Just improved the conciseness and writing of some of the events I was less in love with. Also did this on my personal writing doc for future events.

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -19,7 +19,7 @@
 
  br_venice_events.2.t: "Auditors Uncover Graft"
  br_venice_events.2.d: "Our patient investment in a thorough audit has borne fruit, uncovering a conspiracy and recovering the stolen revenue."
- br_venice_events.2.f: "A single sheet of paper, left on the Provveditore's desk. The wax seal is black.\n\n"The matter of the missing treasury shipment is concluded. The parties have been reminded of their obligations to the Republic. Permanently. The funds are restored. Do not let this happen again.""
+ br_venice_events.2.f: "A single sheet of paper, left on the Provveditore's desk. The wax seal is black.\n\n"The matter of the missing treasury shipment is concluded. The parties have been reminded of their obligations to the Republic, and will commit no further crimes. The funds are restored. Do not let this happen again.""
  br_venice_events.2.a: "Let this be a lesson to all."
 
  br_venice_events.3.t: "Auditors Stir Resentment"
@@ -29,28 +29,28 @@
 
  br_venice_events.4.t: "Whispers in the Piazza"
  br_venice_events.4.d: "Loyalists in Atlanteum report that a radical Atlantican group plots to desecrate the statue The Patrician and the Pearl, a potent symbol of Venetian authority in the city."
- br_venice_events.4.f: "Our informants in the Atlantican taverns and markets bring troubling news. A group, calling themselves the "Sons of the Shore," speak of the statue as an insult, a bronze depiction of their subjugation, with our Patrician forever taking the pearl from the diver at his feet. Their intention is to shatter this hierarchy, literally and symbolically."
+ br_venice_events.4.f: "Our informants in the Atlantican taverns and markets bring troubling news. A group, calling themselves the "Suns of the Shore," speak of the statue as an insult, a bronze depiction of their subjugation, with our Patrician forever taking the pearl from the diver at his feet. Their intention is to shatter this hierarchy, literally and symbolically."
  br_venice_events.4.a: "The garrison will be stationed around the clock."
  br_venice_events.4.b: "Have it quietly removed for “restoration”."
  br_venice_events.4.c: "It is mere bluster. We will not be provoked."
 
  br_venice_events.5.t: "El Masacre de la Perla"
  br_venice_events.5.d: "Protests turned bloody when our soldiers fired upon a crowd attempting to deface the monument, leaving the symbol of our rule spattered with blood."
- br_venice_events.5.f: "The "Sons of the Shore" did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket. \n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains. A local pamphleteer has already dubbed it "The Martyr's Fountain," and the square where it stands has been cordoned off."
+ br_venice_events.5.f: "The Suns of the Shore did not back down. A crowd gathered at the monument, first throwing jeers, then rocks. As the situation escalated, a young man scaled the base with a pot of black paint. A nervous soldier, fearing an attack on his officer, fired his musket. \n\nThe single shot sparked a volley into the crowd. The statue now tells a darker story. The pristine pearl is chipped from a stray bullet. The Patrician's fine robes are streaked with black paint and rust-brown stains.
  br_venice_events.5.a: "Lock down the city!"
  br_venice_events.5.b: "Clean off the stains and cover it up."
  br_venice_events.5.c: "In times like these we must turn to God."
 
  br_venice_events.6.t: "The Ghost in the Piazza"
  br_venice_events.6.d: "Our covert attempt to remove the statue failed, resulting in the Patrician's figure being stolen by protestors, leaving an empty plinth as a monument to our humiliation."
- br_venice_events.6.f: "Our plan was discovered. As our men attempted to disassemble the monument under the veil of night, they were ambushed by the "Sons of the Shore." After a brief, chaotic scuffle, the Atlanteans overwhelmed our workmen and made off with the central statue. \n\nWhere the Patrician once stood, there is only a stark, empty space. The diver still offers his pearl upwards, but now to nothing. A popular joke now circulates in the markets: "The Patrician was so shamed by the theft, he walked into the sea himself." Our authority has been made a laughingstock."
+ br_venice_events.6.f: "Our plan was discovered. As our men attempted to disassemble the monument under the veil of night, they were ambushed by the Suns of the Shore. After a brief, chaotic scuffle, the Atlanteans overwhelmed our workmen and made off with the central statue. \n\nWhere the Patrician once stood, there is only a stark, empty space. The diver still offers his pearl upwards, but now to nothing. A popular joke now circulates in the markets: "The Patrician was so shamed by the theft, he walked into the sea himself." Our authority has been made a laughingstock."
  br_venice_events.6.a: "Search Every Building in the City!"
  br_venice_events.6.b: "Commission a new, grander monument."
  br_venice_events.6.c: "Craft a cheap replica. They won't know the difference."
 
  br_venice_events.7.t: "The Shame of Atlanteum"
  br_venice_events.7.d: "We failed to act, and the protestors have publicly and thoroughly defaced the monument, carving a message of finality into its base."
- br_venice_events.7.f: "They dared. Under the light of day, the "Sons of the Shore" swarmed the Patrician and the Pearl. They were not stopped.\n\n When they departed, the Admiral's pointing hand was broken off, the charter in his other hand was replaced with a hangman's noose, and the inscription "NVNC ET SEMPER" had been chiseled away, replaced with a single, crude word: "FINIS." The message could not be clearer."
+ br_venice_events.7.f: "They dared. Under the light of day, the Suns of the Shore swarmed the Patrician and the Pearl. They were not stopped.\n\n When they departed, the Admiral's pointing hand was broken off, the charter in his other hand was replaced with a hangman's noose, and the inscription "NVNC ET SEMPER" had been chiseled away, replaced with a single, crude word: "FINIS." The message could not be clearer."
  br_venice_events.7.a: "The Patrician Must Come Down."
  br_venice_events.7.b: "Seal off the Piazza."
  br_venice_events.7.c: "We must live with our failure."
@@ -63,7 +63,7 @@
 
  br_venice_events.9.t: "The Statue in the Sawdust"
  br_venice_events.9.d: "After months of fruitless searching, the location of the Patrician has finally been revealed. This discovery was not made by our soldiers, but revealed through a traitor amongst the thieves."
- br_venice_events.9.f: ""Your Excellencies," the message from Provveditore Foscari reads, "a shipwright, one Luca Contarini, fearful for his business and his life, came to us in the dead of night. The ‘Sons of the Shore’ did not smuggle the statue away. They disgraced it where it fell, sawing the Patrician into pieces and hiding the bronze within a false wall in a workshop facing the very square it once dominated. It was a masterpiece of humiliation, hidden in plain sight all along.""
+ br_venice_events.9.f: ""Your Excellencies," the message from Provveditore Foscari reads, "a shipwright, one Luca Contarini, fearful for his business and his life, came to us in the dead of night. The Suns of the Shore sawed the Patrician apart on the very stones of the square, hiding the bronze within a false wall in a workshop facing the very square it once dominated. It was a masterpiece of humiliation, hidden in plain sight all along.""
  br_venice_events.9.a: "Melt it down. We will erase this humiliation."
  br_venice_events.9.b: "Restore it to its plinth. Our authority must be reaffirmed."
 
@@ -74,28 +74,28 @@
  br_venice_events.10.b: "Bring it to Venice. Let this marvel adorn the Piazza San Marco."
 
  br_venice_events.11.t: "The Replica's Shame"
- br_venice_events.11.d: "Our use of a cheap replica has been catastrophically exposed. The "Sons of the Shore" have produced the true statue, parading it through the streets of Atlanteum as a triumphant symbol of our deceit."
- br_venice_events.11.f: "From the personal log of Sergeant Valerio of the Colonial Garrison \n\nThey've made a mockery of our mockery. The replica's head is mounted on a post outside the customs house. A beggar's bowl is nailed beneath it, filled with a handful of lead tokens painted gold—fake coins for our fake Patrician. Scrawled on a plank in tar: "SPARE A DUCAT FOR A BROKEN REPUBLIC?" \n\nThe Arsenale's mark is still visible on the inside of the plaster neck. My men see it. The merchants see it. There's no order I can give that will scrape this shame off our boots."
+ br_venice_events.11.d: "Our use of a cheap replica has been catastrophically exposed. The Sons of the Shore have produced the true statue, parading it through the streets of Atlanteum as a triumphant symbol of our deceit."
+ br_venice_events.11.f: "From the personal log of Sergeant Valerio of the Colonial Garrison \n\n"They've made a mockery of our mockery. The replica's head is mounted on a post outside the customs house. A beggar's bowl is nailed beneath it, filled with a handful of lead tokens painted gold. Fake coins for our fake Patrician. Scrawled on a plank in tar: "SPARE A DUCAT FOR A BROKEN REPUBLIC?" \n\nThe Arsenale's mark is still visible on the inside of the plaster neck. My men see it. The merchants see it. There's no order I can give that will scrape this shame off our boots."
  br_venice_events.11.a: A devastating blow to our prestige.
 
  # Development Events
  br_venice_events.20.t: "The Venetian Gazetteer"
  br_venice_events.20.d: "The Atlantican Courant has been successfully established, the first major newspaper in our colonies. While currently filled with shipping schedules and commodity prices, its editorial page has begun to gently favor Venetian interests."
- br_venice_events.20.f: ""Your Excellencies, for centuries, our galleys have carried the silks of the East and the gold of the West. But I propose a new cargo, one far more potent: the written word. The press is a new kind of ship, gentlemen, a fleet of thought that sails on the tides of reason. It carries not spices or silks, but ideas. And ideas, once landed on the shores of men's minds, can conquer a continent without a single musket being fired. All they require is the wind of your support in their sails."\n\n--Giovanni Battista Rosso, addressing the Council of Ten" 
+ br_venice_events.20.f: ""Your Excellencies, for centuries, our galleys have carried the silks of the East and the gold of the West. But I propose a new cargo, one far more potent: the written word. The press is a new kind of ship, a fleet of thought that requires no wood or cannon. It carries not spices, but ideas. And ideas, once landed on the shores of men's minds, can conquer a continent without a single musket being fired. Let our rivals invest in armies. There is no form of warfare that can hope to compete."\n\n --Giovanni Battista Rosso, addressing the Great Council of Venice"
  br_venice_events.20.a: "Provide a generous subsidy from the treasury."
  br_venice_events.20.b: "Purchase the paper and install a government editor."
  br_venice_events.20.c: "Grant the Church a dedicated column for scripture and homilies."
  # completion/timeout/failure events
  br_venice_events.99.t: "The Roar Heard Across the Sea"
  br_venice_events.99.d: "The Stato da Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
- br_venice_events.99.f: "The work is done. The grumbling has ceased, the flags fly true, and the Lion of St. Mark now watches over a colony reborn. In the grand piazzas of L'Avana, they speak Venetian with pride; in the halls of the Grand Council, Atlantican representatives take their advisory seats. \n\n We did not break them. We did not abandon them. We remade them in our image, and in doing so, have created a power that will echo across the centuries. The Serene Republic is no longer just a European power, it is an Atlantic empire."
+ br_venice_events.99.f: "The work is done. The grumbling has ceased, the flags fly true, and the Lion of St. Mark now watches over a colony reborn. In the grand piazzas of L'Avana, they speak Venetian with pride; in the halls of the Grand Council, Atlantican representatives take their advisory seats. \n\n We did not break them. We did not abandon them. We remade them in our image, and in doing so, have created a power that will echo across the centuries."
  br_venice_events.99.a: "The Mercantile Crown shall never dip from our Brow!" 
  br_venice_events.99.b: "Atlantica will become our breadbasket!"
  br_venice_events.99.c: "All who live under Venetian rule shall prosper."
 
  br_venice_events.100.t: "The Lion's Share"
  br_venice_events.100.d: "The question of Atlantican sovereignty has been answered by the sword. The colony is no more; its lands are now direct possessions of the Serene Republic."
- br_venice_events.100.f: "They challenged our rule, and we have shown them the cost. The Governor's Palace now houses a Venetian magistrate. Their militias are disbanded, their separate identity suppressed. What was once a reconciliation become a conquest. The land is ours, but the people's hearts are not. We have gained territory at the cost of creating a sullen, resentful populace that will require a heavy hand to govern for generations."
+ br_venice_events.100.f: "They challenged our rule, and we have shown them the cost. The Governor's Palace now houses a Venetian magistrate. Their militias are disbanded, their separate identity suppressed. The potential for reconciliation has been replaced by conquest. The land is ours, but the people's hearts are not. We have gained territory at the cost of creating a sullen, resentful populace that will require a heavy hand to govern for generations."
  br_venice_events.100.a: "A necessary action to ensure stability."
 
  br_venice_events.101.t: "The Lost Lion"
